--- a/Dstv/index.html
+++ b/Dstv/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="section-one">
     <section class="section-two">
-        <div class="mydstv"> <img src="/Assignments/MiniProjects/Dstv/icon-logo-mydstv.svg" alt="Dstv Logo">
+        <div class="mydstv"> <img src="/Dstv/icon-logo-mydstv.svg" alt="Dstv Logo">
         </div>
         <div class="para-1">
             <p><strong>Sign in</strong> to your Account</p>
