--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dstv Home Page</title>
-    <link rel="stylesheet" href="Dstv.css">
+    <link rel="stylesheet" href="dstv.css">
     <script src="https://kit.fontawesome.com/50f76a3883.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section class="section-one">
     <section class="section-two">
-        <div class="mydstv"> <img src="/Dstv/icon-logo-mydstv.svg" alt="Dstv Logo">
+        <div class="mydstv"> <img src="/icon-logo-mydstv.svg" alt="Dstv Logo">
         </div>
         <div class="para-1">
             <p><strong>Sign in</strong> to your Account</p>
