--- a/index.html
+++ b/index.html
@@ -3,53 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dstv Home Page</title>
+    <title>Dstv Login Form Template</title>
     <link rel="stylesheet" href="dstv.css">
     <script src="https://kit.fontawesome.com/50f76a3883.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section class="section-one">
+
     <section class="section-two">
+
+        <div class="container1">
         <div class="mydstv"> <img src="icon-logo-mydstv.svg" alt="Dstv Logo">
         </div>
         <div class="para-1">
             <p><strong>Sign in</strong> to your Account</p>
         </div>
-        <div style="justify-content: center;" class="form">
-            <i class="fa-solid fa-location-dot fa-xl" style="color: #ffffff;"></i>
-                    <select class="box-space1">
-                        <option></option>
-                        <option>ANGOLA</option>
-                        <option>BENIN</option>
-                        <option>BURKINA FASO</option>
-                        <option>BURUNDI</option>
-                        <option>CAMEROON</option>
-                        <option>CAPE VERDE</option>
-                        <option>CHAD</option>
-                        <option>CONGO BRAZAVILLE</option>
-                        <option>DRC</option>
+        </div>
 
-                    </select>
-            <br><br><br><br>
-            <i class="fa-solid fa-user-plus fa-xl" style="color: #ffffff;"></i>
-            <input type="tel/text" class="box-space2" placeholder="Surname or mobile">
-            <i class="fa-solid fa-circle-info fa-xl" style="color: #ffffff;"></i>
-            <br><br><br><br>
-            <i class="fa-solid fa-server fa-xl" style="color: #ffffff;"></i>
-            <input type="number" name="" class="box-space2" placeholder="IUC/Smartcard number">
-            <i class="fa-solid fa-circle-info fa-xl" style="color: #ffffff;"></i>
-            <br><br><br>
+        <div class="container2">
+                <i class="fa-solid fa-location-dot fa-xl" style="color: #ffffff;"></i>
+                <select class="box-space1">
+                    <option></option>
+                    <option>ANGOLA</option>
+                    <option>BENIN</option>
+                    <option>BURKINA FASO</option>
+                    <option>BURUNDI</option>
+                    <option>CAMEROON</option>
+                    <option>CAPE VERDE</option>
+                    <option>CHAD</option>
+                    <option>CONGO BRAZAVILLE</option>
+                    <option>DRC</option>
+                </select>
+        </div>
 
-            <input type="checkbox" name="checkbox">
-            <label for="checkbox" id="label">Remember Me</label>
-            </div>
-
-            <br><br>
+        <div class="container3">
+                <i class="fa-solid fa-user-plus fa-xl" style="color: #ffffff;"></i>
+                <input type="tel/text" class="box-space2" placeholder="Surname or mobile">
+                <i class="fa-solid fa-circle-info fa-xl" style="color: #ffffff;"></i>
+        </div>
             
-            <div style="display: flex; justify-content: center;">
+        <div class="container3">
+            <i class="fa-solid fa-server fa-xl" style="color: #ffffff;"></i>
+            <input type="number" name="" class="box-space2" placeholder="IUC/Smartcard number" id="scNumber">
+            <i class="fa-solid fa-circle-info fa-xl" style="color: #ffffff;"></i>
+        </div>
+
+        <div class="checkbox1">
+            <input type="checkbox" name="checkbox" id="checkbox1">
+            <label for="checkbox" id="label">Remember Me</label>
+        </div>
+
+        <div id="sign-in">
             <button type="submit" class="sign-in">SIGN IN</button>
-            <i class="fa-solid fa-angle-right fa-xl" style="color: #bbbaba;"></i>
-            </div>
+            <i class="fa-solid fa-angle-right" style="color: #bbbaba;"></i>
+        </div>
             
         </section>
 
